fix(body): overflow hidden

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -9,4 +9,5 @@ body {
   color: $font-color-primary;
   background-color: $white;
   font-family: Poppins, Helvetica, sans-serif;
+  overflow: hidden;
 }
